--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         マニフェスト（医療拡充、介護予算増加など） <input type="text" id="p1manifesto"/><br>
         new password <input type="text" id="p1password"/><br><br>
         <input type="button" id="p1button" value="立候補ボタン" onclick="callRegist();"/>
-        　<font color="red"><span id="p1result"</span></font>
+        　<font color="red"><span id="p1result"></span></font>
     </div>
     <br><hr>
     <div class = "area_p2">
